src/re2c-scanner-r.cc
/* Generated by re2c 4.3 on Fri Dec  5 07:25:33 2025 */
#line 1 "re2c-scanner-r.re"
/*
This file is part of P2X.
Copyright © 2018 Johannes Willkomm
See the file p2x.cc for copying conditions.
*/

#include "token.ncd.enum.hh"
#include <string.h>

#line 13 "re2c-scanner-r.cc"
#define YYMAXFILL 4
#line 10 "re2c-scanner-r.re"


typedef unsigned char uint8_t;

int re2c_scanner_r_lex(const uint8_t *&s, const uint8_t *&m, uint8_t const * lim)
{

  
#line 24 "re2c-scanner-r.cc"
#line 17 "re2c-scanner-r.re"


  lim += YYMAXFILL;

    
#line 31 "re2c-scanner-r.cc"
{
	uint8_t yych;
	unsigned int yyaccept = 0;
	if ((lim - s) < 4) return false;
	yych = *s;
	switch (yych) {
		case 0x00: goto yy1;
		case '\t': goto yy4;
		case '\n': goto yy5;
		case '\r': goto yy6;
		case ' ': goto yy7;
		case '!': goto yy9;
		case '"': goto yy11;
		case '#': goto yy13;
		case '$': goto yy14;
		case '%': goto yy15;
		case '&': goto yy17;
		case '\'': goto yy19;
		case '(': goto yy21;
		case ')': goto yy22;
		case '*': goto yy23;
		case '+': goto yy24;
		case ',': goto yy25;
		case '-': goto yy26;
		case '.': goto yy28;
		case '/': goto yy30;
		case '0': goto yy31;
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy33;
		case ':': goto yy35;
		case ';': goto yy37;
		case '<': goto yy38;
		case '=': goto yy40;
		case '>': goto yy42;
		case '?': goto yy44;
		case '@': goto yy45;
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy46;
		case '[': goto yy49;
		case '\\': goto yy51;
		case ']': goto yy52;
		case '^': goto yy54;
		case '_': goto yy55;
		case '{': goto yy56;
		case '|': goto yy57;
		case '}': goto yy59;
		case '~': goto yy60;
		case 0xB0: goto yy61;
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF: goto yy62;
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF: goto yy63;
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy64;
		default: goto yy2;
	}
yy1:
	++s;
#line 133 "re2c-scanner-r.re"
	{ return TOKEN_EOF; }
#line 199 "re2c-scanner-r.cc"
yy2:
	++s;
yy3:
#line 135 "re2c-scanner-r.re"
	{ return TOKEN_ILLEGAL_CHAR; }
#line 205 "re2c-scanner-r.cc"
yy4:
	++s;
#line 128 "re2c-scanner-r.re"
	{ return TOKEN_TAB; }
#line 210 "re2c-scanner-r.cc"
yy5:
	++s;
#line 127 "re2c-scanner-r.re"
	{ return TOKEN_NEWLINE; }
#line 215 "re2c-scanner-r.cc"
yy6:
	++s;
#line 126 "re2c-scanner-r.re"
	{ return TOKEN_CRETURN; }
#line 220 "re2c-scanner-r.cc"
yy7:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case ' ': goto yy7;
		default: goto yy8;
	}
yy8:
#line 129 "re2c-scanner-r.re"
	{ return TOKEN_SPACE; }
#line 232 "re2c-scanner-r.cc"
yy9:
	yych = *++s;
	switch (yych) {
		case '=': goto yy65;
		default: goto yy10;
	}
yy10:
#line 97 "re2c-scanner-r.re"
	{ return TOKEN_EXCLAM; }
#line 242 "re2c-scanner-r.cc"
yy11:
	yyaccept = 0;
	yych = *(m = ++s);
	switch (yych) {
		case 0x00:
		case '\n': goto yy12;
		default: goto yy67;
	}
yy12:
#line 123 "re2c-scanner-r.re"
	{ return TOKEN_QUOTE; }
#line 254 "re2c-scanner-r.cc"
yy13:
	++s;
#line 122 "re2c-scanner-r.re"
	{ return TOKEN_HASH; }
#line 259 "re2c-scanner-r.cc"
yy14:
	++s;
#line 120 "re2c-scanner-r.re"
	{ return TOKEN_DOLLAR; }
#line 264 "re2c-scanner-r.cc"
yy15:
	yyaccept = 1;
	yych = *(m = ++s);
	switch (yych) {
		case ' ': goto yy16;
		default: goto yy73;
	}
yy16:
#line 116 "re2c-scanner-r.re"
	{ return TOKEN_MOD; }
#line 275 "re2c-scanner-r.cc"
yy17:
	yych = *++s;
	switch (yych) {
		case '&': goto yy75;
		default: goto yy18;
	}
yy18:
#line 106 "re2c-scanner-r.re"
	{ return TOKEN_AND; }
#line 285 "re2c-scanner-r.cc"
yy19:
	yyaccept = 2;
	yych = *(m = ++s);
	switch (yych) {
		case 0x00:
		case '\n': goto yy20;
		default: goto yy77;
	}
yy20:
#line 124 "re2c-scanner-r.re"
	{ return TOKEN_APOS; }
#line 297 "re2c-scanner-r.cc"
yy21:
	++s;
#line 68 "re2c-scanner-r.re"
	{ return TOKEN_L_PAREN; }
#line 302 "re2c-scanner-r.cc"
yy22:
	++s;
#line 69 "re2c-scanner-r.re"
	{ return TOKEN_R_PAREN; }
#line 307 "re2c-scanner-r.cc"
yy23:
	++s;
#line 115 "re2c-scanner-r.re"
	{ return TOKEN_MULT; }
#line 312 "re2c-scanner-r.cc"
yy24:
	++s;
#line 111 "re2c-scanner-r.re"
	{ return TOKEN_PLUS; }
#line 317 "re2c-scanner-r.cc"
yy25:
	++s;
#line 102 "re2c-scanner-r.re"
	{ return TOKEN_COMMA; }
#line 322 "re2c-scanner-r.cc"
yy26:
	yych = *++s;
	switch (yych) {
		case '>': goto yy79;
		default: goto yy27;
	}
yy27:
#line 112 "re2c-scanner-r.re"
	{ return TOKEN_MINUS; }
#line 332 "re2c-scanner-r.cc"
yy28:
	yyaccept = 3;
	yych = *(m = ++s);
	switch (yych) {
		case '.':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z':
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF:
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF:
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy47;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy81;
		default: goto yy29;
	}
yy29:
#line 104 "re2c-scanner-r.re"
	{ return TOKEN_FULL_STOP; }
#line 462 "re2c-scanner-r.cc"
yy30:
	++s;
#line 113 "re2c-scanner-r.re"
	{ return TOKEN_DIV; }
#line 467 "re2c-scanner-r.cc"
yy31:
	yyaccept = 4;
	yych = *(m = ++s);
	switch (yych) {
		case 'x': goto yy90;
		default: goto yy34;
	}
yy32:
#line 64 "re2c-scanner-r.re"
	{ return TOKEN_INTEGER; }
#line 478 "re2c-scanner-r.cc"
yy33:
	yyaccept = 4;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
yy34:
	switch (yych) {
		case '.': goto yy86;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy33;
		case 'D':
		case 'E':
		case 'd':
		case 'e': goto yy87;
		case 'L':
		case 'U':
		case 'l':
		case 'u': goto yy88;
		case 'i': goto yy89;
		default: goto yy32;
	}
yy35:
	yych = *++s;
	switch (yych) {
		case ':': goto yy91;
		default: goto yy36;
	}
yy36:
#line 99 "re2c-scanner-r.re"
	{ return TOKEN_COLON; }
#line 517 "re2c-scanner-r.cc"
yy37:
	++s;
#line 103 "re2c-scanner-r.re"
	{ return TOKEN_SEMICOLON; }
#line 522 "re2c-scanner-r.cc"
yy38:
	yyaccept = 5;
	yych = *(m = ++s);
	switch (yych) {
		case '-': goto yy93;
		case '<': goto yy94;
		case '=': goto yy95;
		default: goto yy39;
	}
yy39:
#line 87 "re2c-scanner-r.re"
	{ return TOKEN_LESS; }
#line 535 "re2c-scanner-r.cc"
yy40:
	yych = *++s;
	switch (yych) {
		case '=': goto yy96;
		default: goto yy41;
	}
yy41:
#line 80 "re2c-scanner-r.re"
	{ return TOKEN_EQUAL; }
#line 545 "re2c-scanner-r.cc"
yy42:
	yych = *++s;
	switch (yych) {
		case '=': goto yy97;
		default: goto yy43;
	}
yy43:
#line 88 "re2c-scanner-r.re"
	{ return TOKEN_GREATER; }
#line 555 "re2c-scanner-r.cc"
yy44:
	++s;
#line 98 "re2c-scanner-r.re"
	{ return TOKEN_QUESTION; }
#line 560 "re2c-scanner-r.cc"
yy45:
	++s;
#line 105 "re2c-scanner-r.re"
	{ return TOKEN_AT; }
#line 565 "re2c-scanner-r.cc"
yy46:
	yyaccept = 6;
	m = ++s;
	if (lim <= s) return false;
	yych = *s;
yy47:
	switch (yych) {
		case '.':
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9':
		case 'A':
		case 'B':
		case 'C':
		case 'D':
		case 'E':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'd':
		case 'e':
		case 'f':
		case 'g':
		case 'h':
		case 'i':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy46;
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF: goto yy83;
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF: goto yy84;
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy85;
		default: goto yy48;
	}
yy48:
#line 130 "re2c-scanner-r.re"
	{ return TOKEN_IDENTIFIER; }
#line 698 "re2c-scanner-r.cc"
yy49:
	yych = *++s;
	switch (yych) {
		case '[': goto yy98;
		default: goto yy50;
	}
yy50:
#line 74 "re2c-scanner-r.re"
	{ return TOKEN_L_BRACKET; }
#line 708 "re2c-scanner-r.cc"
yy51:
	++s;
#line 114 "re2c-scanner-r.re"
	{ return TOKEN_BACKSLASH; }
#line 713 "re2c-scanner-r.cc"
yy52:
	yych = *++s;
	switch (yych) {
		case ']': goto yy99;
		default: goto yy53;
	}
yy53:
#line 75 "re2c-scanner-r.re"
	{ return TOKEN_R_BRACKET; }
#line 723 "re2c-scanner-r.cc"
yy54:
	++s;
#line 118 "re2c-scanner-r.re"
	{ return TOKEN_POW; }
#line 728 "re2c-scanner-r.cc"
yy55:
	++s;
#line 119 "re2c-scanner-r.re"
	{ return TOKEN_UNDERSCORE; }
#line 733 "re2c-scanner-r.cc"
yy56:
	++s;
#line 71 "re2c-scanner-r.re"
	{ return TOKEN_L_BRACE; }
#line 738 "re2c-scanner-r.cc"
yy57:
	yych = *++s;
	switch (yych) {
		case '|': goto yy100;
		default: goto yy58;
	}
yy58:
#line 108 "re2c-scanner-r.re"
	{ return TOKEN_OR; }
#line 748 "re2c-scanner-r.cc"
yy59:
	++s;
#line 72 "re2c-scanner-r.re"
	{ return TOKEN_R_BRACE; }
#line 753 "re2c-scanner-r.cc"
yy60:
	++s;
#line 96 "re2c-scanner-r.re"
	{ return TOKEN_TILDE; }
#line 758 "re2c-scanner-r.cc"
yy61:
	++s;
#line 121 "re2c-scanner-r.re"
	{ return TOKEN_CIRC; }
#line 763 "re2c-scanner-r.cc"
yy62:
	yych = *++s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy46;
		default: goto yy3;
	}
yy63:
	yyaccept = 7;
	yych = *(m = ++s);
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy83;
		default: goto yy3;
	}
yy64:
	yyaccept = 7;
	yych = *(m = ++s);
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy84;
		default: goto yy3;
	}
yy65:
	++s;
#line 94 "re2c-scanner-r.re"
	{ return TOKEN_NOT_EQUAL; }
#line 977 "re2c-scanner-r.cc"
yy66:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy67:
	switch (yych) {
		case 0x00:
		case '\n': goto yy68;
		case '"': goto yy69;
		case '\\': goto yy71;
		default: goto yy66;
	}
yy68:
	s = m;
	switch (yyaccept) {
		case 0: goto yy12;
		case 1: goto yy16;
		case 2: goto yy20;
		case 3: goto yy29;
		case 4: goto yy32;
		case 5: goto yy39;
		case 6: goto yy48;
		case 7: goto yy3;
		case 8: goto yy82;
		default: goto yy70;
	}
yy69:
	++s;
yy70:
#line 65 "re2c-scanner-r.re"
	{ return TOKEN_STRING; }
#line 1009 "re2c-scanner-r.cc"
yy71:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x00:
		case '\n': goto yy68;
		case '"': goto yy101;
		case '\\': goto yy71;
		default: goto yy66;
	}
yy72:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy73:
	switch (yych) {
		case ' ': goto yy68;
		case '%': goto yy74;
		default: goto yy72;
	}
yy74:
	++s;
#line 117 "re2c-scanner-r.re"
	{ return TOKEN_OPERATOR; }
#line 1035 "re2c-scanner-r.cc"
yy75:
	++s;
#line 107 "re2c-scanner-r.re"
	{ return TOKEN_DOUBLE_AND; }
#line 1040 "re2c-scanner-r.cc"
yy76:
	++s;
	if (lim <= s) return false;
	yych = *s;
yy77:
	switch (yych) {
		case 0x00:
		case '\n': goto yy68;
		case '\'': goto yy69;
		case '\\': goto yy78;
		default: goto yy76;
	}
yy78:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x00:
		case '\n': goto yy68;
		case '\'': goto yy102;
		case '\\': goto yy78;
		default: goto yy76;
	}
yy79:
	yych = *++s;
	switch (yych) {
		case '>': goto yy103;
		default: goto yy80;
	}
yy80:
#line 84 "re2c-scanner-r.re"
	{ return TOKEN_RIGHT_ARROW; }
#line 1073 "re2c-scanner-r.cc"
yy81:
	yyaccept = 8;
	m = ++s;
	if ((lim - s) < 3) return false;
	yych = *s;
	switch (yych) {
		case '.':
		case 'A':
		case 'B':
		case 'C':
		case 'F':
		case 'G':
		case 'H':
		case 'I':
		case 'J':
		case 'K':
		case 'L':
		case 'M':
		case 'N':
		case 'O':
		case 'P':
		case 'Q':
		case 'R':
		case 'S':
		case 'T':
		case 'U':
		case 'V':
		case 'W':
		case 'X':
		case 'Y':
		case 'Z':
		case '_':
		case 'a':
		case 'b':
		case 'c':
		case 'f':
		case 'g':
		case 'h':
		case 'j':
		case 'k':
		case 'l':
		case 'm':
		case 'n':
		case 'o':
		case 'p':
		case 'q':
		case 'r':
		case 's':
		case 't':
		case 'u':
		case 'v':
		case 'w':
		case 'x':
		case 'y':
		case 'z': goto yy46;
		case '0':
		case '1':
		case '2':
		case '3':
		case '4':
		case '5':
		case '6':
		case '7':
		case '8':
		case '9': goto yy81;
		case 'D':
		case 'E':
		case 'd':
		case 'e': goto yy104;
		case 'i': goto yy105;
		case 0xC0:
		case 0xC1:
		case 0xC2:
		case 0xC3:
		case 0xC4:
		case 0xC5:
		case 0xC6:
		case 0xC7:
		case 0xC8:
		case 0xC9:
		case 0xCA:
		case 0xCB:
		case 0xCC:
		case 0xCD:
		case 0xCE:
		case 0xCF:
		case 0xD0:
		case 0xD1:
		case 0xD2:
		case 0xD3:
		case 0xD4:
		case 0xD5:
		case 0xD6:
		case 0xD7:
		case 0xD8:
		case 0xD9:
		case 0xDA:
		case 0xDB:
		case 0xDC:
		case 0xDD:
		case 0xDE:
		case 0xDF: goto yy83;
		case 0xE0:
		case 0xE1:
		case 0xE2:
		case 0xE3:
		case 0xE4:
		case 0xE5:
		case 0xE6:
		case 0xE7:
		case 0xE8:
		case 0xE9:
		case 0xEA:
		case 0xEB:
		case 0xEC:
		case 0xED:
		case 0xEE:
		case 0xEF: goto yy84;
		case 0xF0:
		case 0xF1:
		case 0xF2:
		case 0xF3:
		case 0xF4:
		case 0xF5:
		case 0xF6:
		case 0xF7: goto yy85;
		default: goto yy82;
	}
yy82:
#line 66 "re2c-scanner-r.re"
	{ return TOKEN_FLOAT; }
#line 1205 "re2c-scanner-r.cc"
yy83:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
		case 0xA4:
		case 0xA5:
		case 0xA6:
		case 0xA7:
		case 0xA8:
		case 0xA9:
		case 0xAA:
		case 0xAB:
		case 0xAC:
		case 0xAD:
		case 0xAE:
		case 0xAF:
		case 0xB0:
		case 0xB1:
		case 0xB2:
		case 0xB3:
		case 0xB4:
		case 0xB5:
		case 0xB6:
		case 0xB7:
		case 0xB8:
		case 0xB9:
		case 0xBA:
		case 0xBB:
		case 0xBC:
		case 0xBD:
		case 0xBE:
		case 0xBF: goto yy46;
		default: goto yy68;
	}
yy84:
	++s;
	if (lim <= s) return false;
	yych = *s;
	switch (yych) {
		case 0x80:
		case 0x81:
		case 0x82:
		case 0x83:
		case 0x84:
		case 0x85:
		case 0x86:
		case 0x87:
		case 0x88:
		case 0x89:
		case 0x8A:
		case 0x8B:
		case 0x8C:
		case 0x8D:
		case 0x8E:
		case 0x8F:
		case 0x90:
		case 0x91:
		case 0x92:
		case 0x93:
		case 0x94:
		case 0x95:
		case 0x96:
		case 0x97:
		case 0x98:
		case 0x99:
		case 0x9A:
		case 0x9B:
		case 0x9C:
		case 0x9D:
		case 0x9E:
		case 0x9F:
		case 0xA0:
		case 0xA1:
		case 0xA2:
		case 0xA3:
